@@ -129,19 +129,22 @@ exports.debugClearFailAt = function (endpoint) {
   }
 };
 
-
-exports.debugClearFailAt = function (endpoint) {
+exports.debugGetFailurePoints = function (endpoint) {
   const primaryEndpoint = arango.getEndpoint();
   try {
     reconnectRetry(endpoint, db._name(), "root", "");
-    let res = arango.DELETE_RAW('/_admin/debug/failat');
-    if (res.code !== 200) {
-      throw "Error removing failure points";
+    let haveFailAt = arango.GET("/_admin/debug/failat") === true;
+    if (haveFailAt) {
+      let res = arango.GET_RAW('/_admin/debug/failat/all');
+      if (res.code !== 200) {
+        throw "Error checking failure points = " + JSON.stringify(res);
+      }
+      return res.parsedBody;
     }
-    return true;
   } finally {
     reconnectRetry(primaryEndpoint, "_system", "root", "");
   }
+  return [];
 };
 
 exports.getChecksum = function (endpoint, name) {
@@ -177,8 +180,6 @@ exports.getMetric = function (endpoint, name) {
   }
 };
 
-const arangosh = fs.join(global.ARANGOSH_PATH, 'arangosh' + pu.executableExt);
-
 const debug = function (text) {
   console.warn(text);
 };
@@ -205,7 +206,7 @@ const runShell = function(args, prefix) {
     argv.push(options['javascript.module-directory'][o]);
   }
 
-  let result = internal.executeExternal(arangosh, argv, false /*usePipes*/);
+  let result = internal.executeExternal(global.ARANGOSH_BIN, argv, false /*usePipes*/);
   assertTrue(result.hasOwnProperty('pid'));
   let status = internal.statusExternal(result.pid);
   assertEqual(status.status, "RUNNING");
@@ -246,7 +247,7 @@ while (++saveTries < 100) {
 exports.runShell = runShell;
 
 exports.runParallelArangoshTests = function (tests, duration, cn) {
-  assertTrue(fs.isFile(arangosh), "arangosh executable not found!");
+  assertTrue(fs.isFile(global.ARANGOSH_BIN), "arangosh executable not found!");
   
   assertFalse(db[cn].exists("stop"));
   let clients = [];
