@@ -109,19 +109,23 @@ function BaseTestConfig () {
 
       compare(
         function (state) {
-          arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
+          try {
+            arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
 
-          let c = db._create(cn);
-          let docs = [];
+            let c = db._create(cn);
+            let docs = [];
 
-          for (let i = 0; i < 5000; ++i) {
-            docs.push({ value: i });
+            for (let i = 0; i < 5000; ++i) {
+              docs.push({ value: i });
+            }
+            c.insert(docs);
+
+            state.checksum = collectionChecksum(cn);
+            state.count = collectionCount(cn);
+            assertEqual(5000, state.count);
+          } finally {
+            arango.DELETE_RAW("/_admin/debug/failat", "");
           }
-          c.insert(docs);
-
-          state.checksum = collectionChecksum(cn);
-          state.count = collectionCount(cn);
-          assertEqual(5000, state.count);
         },
         function (state) {
           arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
@@ -135,9 +139,12 @@ function BaseTestConfig () {
           var c = db._collection(cn);
           assertEqual(5000, c.count());
           assertEqual(5000, c.toArray().length);
-          arango.PUT_RAW("/_admin/debug/failat/RocksDBCommitCounts", "");
-          c.insert({});
-          arango.DELETE_RAW("/_admin/debug/failat", "");
+          try {
+            arango.PUT_RAW("/_admin/debug/failat/RocksDBCommitCounts", "");
+            c.insert({});
+          } finally {
+            arango.DELETE_RAW("/_admin/debug/failat", "");
+          }
           assertEqual(5000, c.count());
           assertEqual(5001, c.toArray().length);
         },
@@ -164,40 +171,47 @@ function BaseTestConfig () {
 
       compare(
         function (state) {
-          arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
-          let c = db._create(cn);
-          let docs = [];
+          try {
+            arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
+            let c = db._create(cn);
+            let docs = [];
 
-          for (let i = 0; i < 10000; ++i) {
-            docs.push({ value: i, _key: "test" + i });
+            for (let i = 0; i < 10000; ++i) {
+              docs.push({ value: i, _key: "test" + i });
+            }
+            c.insert(docs);
+
+            state.checksum = collectionChecksum(cn);
+            state.count = collectionCount(cn);
+            assertEqual(10000, state.count);
+          } finally {
+            arango.DELETE_RAW("/_admin/debug/failat", "");
           }
-          c.insert(docs);
-
-          state.checksum = collectionChecksum(cn);
-          state.count = collectionCount(cn);
-          assertEqual(10000, state.count);
         },
         function (state) {
-          arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
+          try {
+            arango.PUT_RAW("/_admin/debug/failat/disableRevisionsAsDocumentIds", "");
 
-          //  already create the collection on the follower
-          replication.syncCollection(cn, {
-            endpoint: leaderEndpoint,
-            incremental: false
-          });
-          
-          // collection present on follower now
-          var c = db._collection(cn);
-          for (let i = 0; i < 10000; i += 10) {
-            c.remove("test" + i);
+            //  already create the collection on the follower
+            replication.syncCollection(cn, {
+              endpoint: leaderEndpoint,
+              incremental: false
+            });
+
+            // collection present on follower now
+            var c = db._collection(cn);
+            for (let i = 0; i < 10000; i += 10) {
+              c.remove("test" + i);
+            }
+            assertEqual(9000, c.count());
+            assertEqual(9000, c.toArray().length);
+            arango.PUT_RAW("/_admin/debug/failat/RocksDBCommitCounts", "");
+            for (let i = 0; i < 100; ++i) {
+              c.insert({ _key: "testmann" + i });
+            }
+          } finally {
+            arango.DELETE_RAW("/_admin/debug/failat", "");
           }
-          assertEqual(9000, c.count());
-          assertEqual(9000, c.toArray().length);
-          arango.PUT_RAW("/_admin/debug/failat/RocksDBCommitCounts", "");
-          for (let i = 0; i < 100; ++i) {
-            c.insert({ _key: "testmann" + i });
-          }
-          arango.DELETE_RAW("/_admin/debug/failat", "");
           assertEqual(9000, c.count());
           assertEqual(9100, c.toArray().length);
         },
